# GaiaCatalogQuery

./: CMakeLists.txt  Catalog.cpp  Catalog.h  CatalogCalMaster.cpp  CatalogCalMaster.h  CatalogMerge.cpp  CatalogMerge.h  ConsoleRead.cpp  ConsoleRead.h  CsvRead.cpp  CsvRead.h  GaiaTest.cpp  GaiaTest.h  Log.cpp  Log.h  README.md  magic_enum.h  main.cpp  split.cpp  split.h
healpix/: CMakeLists.txt  healpix.h  vec3.h
sofa/: a2af.c  a2tf.c  ab.c  ae2hd.c  af2a.c  anp.c  anpm.c  apcg.c  apcg13.c  apci.c  apci13.c  apco.c  apco13.c  apcs.c  apcs13.c  aper.c  aper13.c  apio.c  apio13.c  atcc13.c  atccq.c  atci13.c  atciq.c  atciqn.c  atciqz.c  atco13.c  atic13.c  aticq.c  aticqn.c  atio13.c  atioq.c  atoc13.c  atoi13.c  atoiq.c  bi00.c  bp00.c  bp06.c  bpn2xy.c  c2i00a.c  c2i00b.c  (+210 more)
