cmake_minimum_required(VERSION 3.16)
project(GaiaCatalogQuery)
#find_package(protobuf CONFIG REQUIRED)
#if (protobuf_VERBOSE)
#    message(STATUS "Using Protocol Buffers ${protobuf_VERSION}")
#endif ()
set(CMAKE_CXX_STANDARD 17)
#message("${Protobuf_VERSION}")
SET(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS_RELEASE"-Ofast")
file(GLOB SRC_LIST  "./sofa/*.c")
add_executable(CrossMatching ${SRC_LIST}  CatalogCalMaster.cpp CatalogCalMaster.h CsvRead.cpp CsvRead.h main.cpp CatalogMerge.cpp CatalogMerge.h Log.cpp Log.h magic_enum.h Catalog.cpp Catalog.h split.cpp split.h GaiaTest.cpp GaiaTest.h)

target_link_libraries(CrossMatching PRIVATE )
